phase-0-html-riyadh-blog-lab

--- a/index.html
+++ b/index.html
@@ -5,13 +5,112 @@
   <title>Code Challenge 1</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
+<style>
+    /* Reset some default styles */
+    body, h1, h2, h3, p, a {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      box-sizing: border-box;
+    }
+
+    /* Body styling */
+    body {
+      background: linear-gradient(to right, #e0f7fa, #ffffff);
+      color: #333;
+      line-height: 1.6;
+      padding: 20px;
+    }
+
+    /* Wrapper layout */
+    .wrapper {
+      max-width: 1000px;
+      margin: 0 auto;
+      background: #ffffff;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Headings */
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      color: #00796b;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin-bottom: 30px;
+      color: #004d40;
+    }
+
+    h3 {
+      margin-top: 30px;
+      font-size: 1.2rem;
+      color: #00695c;
+    }
+
+    /* Paragraphs */
+    p {
+      margin-top: 10px;
+      font-size: 1rem;
+    }
+
+    /* Images */
+    img {
+      margin-top: 10px;
+      width: 100%;
+      max-width: 600px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+    }
+
+    /* Links */
+    a {
+      display: inline-block;
+      margin-top: 20px;
+      margin-right: 15px;
+      text-decoration: none;
+      color: #ffffff;
+      background-color: #00796b;
+      padding: 10px 16px;
+      border-radius: 6px;
+      transition: background 0.3s ease;
+    }
+
+    a:hover {
+      background-color: #004d40;
+    }
+  </style>
+</head>
 <body>
   <div class="wrapper">
     <!-- HEADER -->
+    <h1>Welcome to Riyadh</h1>
+
     <!-- SUB HEAD -->
+     <h2>Where A Traditional Past Meets A Modern Future.</h2>
+
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
+     <h3>Travel</h3>
+  <p>Once a mudbrick waystation along desert trading routes, Riyadh is now a thriving modern city.</p>
+  <img src="./images/transportation/transit.jpg" alt="Modern Transit">
+
+  <h3>History</h3>
+  <p>From ancient souks to cutting-edge galleries, Riyadh celebrates tradition and innovation side by side.</p>
+  <img src="./images/garden.jpg" alt="Riyadh Garden">
+
+  <h3>Sources</h3>
+  <p>The city is divided into 15 municipal districts</p>
+  <img src="./images/transportation/camels-in-truck.jpg" alt="The roads of Riyadh">
+
+  <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Visit the Official Riyadh Site</a>
+  <a href="http://en.wikipedia.org/wiki/Riyadh" target="_blank">Explore More Landmarks</a>
+
     </div>
   </div>
 </body>
